# libertas

./: .gitignore  MIGRATION_GUIDE.md  README.md  REFACTOR_STATUS.md  pyproject.toml  test.ipynb
.github/: CONTRIBUTING.md  WORKFLOWS.md
.github/badges/: coverage.json  tests.json
.github/workflows/: badges.yml  nightly.yml  pr-checks.yml  release.yml  test.yml
scripts/: README.md  setup_ollama.py  test.py
src/agents/: __init__.py  pod.py  worker.py
src/libertas/: __init__.py
src/libertas/agents/: __init__.py  worker.py
src/libertas/cognitive/: __init__.py  goals.py  memory.py  mood.py  needs.py  personality.py
src/libertas/economy/: __init__.py  inventory.py  market.py  production.py  resource.py
src/libertas/governance/: __init__.py  constitution.py  voting.py
src/libertas/organization/: __init__.py  federation.py  pod.py  worker.py
src/libertas/resources/: __init__.py  consumable.py  equipment.py  inventory.py  material.py  recipes.py  registry.py  resource.py  tool.py
src/libertas/tests/: conftest.py
src/libertas/tests/e2e/: test_autonomous_simulation.py  test_simple_simulation.py
src/libertas/tests/integration/: test_autonomous_agent.py  test_autonomous_governance.py  test_governance_integration.py  test_worker_pod_integration.py
src/libertas/tests/unit/cognitive/: __init__.py  test_goal_system.py  test_semantic_memory.py
src/libertas/tests/unit/economy/: test_inventory.py  test_market.py  test_production.py  test_resource.py
src/libertas/tests/unit/governance/: test_constitution.py  test_voting.py
src/libertas/tests/unit/organization/: test_cognitive_loop.py  test_federation.py  test_federation_additional.py  test_pod.py  test_pod_production.py  test_worker.py  test_worker_additional.py  test_worker_coverage.py  test_worker_learning.py  test_worker_phase3.py
src/libertas/tests/unit/resources/: __init__.py  test_material.py  test_tool.py
src/libertas/tests/unit/tools/: test_cognitive_tools.py  test_economic_tools.py  test_governance_tools.py  test_organization_tools.py
src/libertas/tools/: __init__.py  cognitive_tools.py  economic_tools.py  governance_tools.py  needs_tools.py  organization_tools.py
