[build-system]
requires = ["setuptools>=65", "wheel", "Cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "libertas"
version = "0.1.0"
description = "Libertas - Agent-based modeling of organizational structures."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ryan Ennis", email = "ryansennis@hotmail.com" }]
dependencies = [
    "numpy>=2.0.2",
    "plotly>=6.7.0",
    "scipy>=1.13.1",
    "Mesa>=2.4.0",
    "Mesa-LLM>=0.3.2",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
notebooks = [
    "nbformat>=4.2.0",
    "ipykernel>=7.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "libertas[notebooks]",
    "libertas[test]",
    "libertas[dev]",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*", "docs*", "notebooks*"]

[project.urls]
Homepage = "https://github.com/ryansennis/libertas"
Repository = "https://github.com/ryansennis/libertas"
Issues = "https://github.com/ryansennis/libertas/issues"

# Tool configurations
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "src/libertas/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=libertas",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src/libertas"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
precision = 2
show_missing = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mesa.*", "mesa_llm.*", "networkx.*"]
ignore_missing_imports = true